Reworking user profile info. Flutter release 23.06

--- a/flutter/23.02.md
+++ b/flutter/23.02.md
@@ -1,6 +1,6 @@
 <p>
   This document will guide you through the process of Countly SDK installation
-  and it applies to version 23.6.0
+  and it applies to version 23.2.0
 </p>
 <div class="callout callout--info">
   <p>
@@ -649,7 +649,7 @@ Countly.disablePushNotifications();</code></pre>
 </ul>
 <p>You can drag and drop the file from Pod to Compile Sources.</p>
 <div class="img-container">
-  <img src="/guide-media/01GVCKG6BTNK2EK9JYCG3SR73X" alt="Flutter_iOS_Notifications.png">
+  <img src="/hc/article_attachments/900005820306/Flutter_iOS_Notifications.png" alt="Flutter_iOS_Notifications.png">
 </div>
 <h2>Enabling push</h2>
 <p>
@@ -707,7 +707,7 @@ override func userNotificationCenter(\_ center: UNUserNotificationCenter, didRec
 </code></pre>
 <h3>Data Structure Received in Push Callbacks</h3>
 <p>
-  Here is the example of how data will receive in push callbacks:<img src="/guide-media/01GVDG0K4G51KAKZJZVZHNYQ4A" alt="Screenshot_2022-06-24_at_7.04.23_PM.png"><br>
+  Here is the example of how data will receive in push callbacks:<img src="/hc/article_attachments/7830011337369/Screenshot_2022-06-24_at_7.04.23_PM.png" alt="Screenshot_2022-06-24_at_7.04.23_PM.png"><br>
   <br>
   Data Received for Android platform:
 </p>
@@ -765,220 +765,100 @@ Countly.setUserLocation(countryCode: 'TR', city: 'Istanbul', gpsCoordinates: '41
 </p>
 <pre><code class="JavaScript">//disable location tracking
 Countly.disableLocation();</code></pre>
-<h1>Remote Config</h1>
+<h1>Remote config</h1>
 <p>
-  <span style="font-weight: 400;">Remote config allows you to modify how your app functions or looks by requesting key-value pairs from your Countly server. The returned values may be modified based on the user properties. For more details, please see the </span><a href="https://resources.count.ly/docs/remote-config"><span style="font-weight: 400;">Remote Config documentation</span></a><span style="font-weight: 400;">.</span>
+  Remote config allows you to modify how your app functions or looks by requesting
+  key-value pairs from your Countly server. The returned values can be modified
+  based on the user profile. For more details please see Remote Config documentation.
+</p>
+<h2>Automatic remote config</h2>
+<p>
+  There are two ways of acquiring remote config data, by automatic download or
+  manual request. By default, automatic remote config is disabled and therefore
+  without developer intervention no remote config values will be requested.
 </p>
 <p>
-  Once downloaded, Remote config values will be saved persistently and available
-  on your device between app restarts unless they are erased.
+  Automatic value download happens when the SDK is initiated or when the device
+  ID is changed. To enable it, you have to call
+  <code>setRemoteConfigAutomaticDownload</code> before init. As an optional value
+  you can provide a callback to be informed when the request is finished.
+</p>
+<pre><code class="JavaScript">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);<br>config.setRemoteConfigAutomaticDownload(true, (error) {<br>   print(error);<br>});</code></pre>
+<p>
+  If the callback returns a non-null value, then you can expect that the request
+  failed and no values were updated.
 </p>
 <p>
-  <span style="font-weight: 400;">The two ways of acquiring remote config data are enabling automatic download triggers or manual requests.</span>
+  When doing an automatic update, all locally stored values are replaced with the
+  ones received (all locally stored ones are deleted and in their place are put
+  new ones). It is possible that a previously valid key returns no value after
+  an update.
 </p>
+<h2>Manual remote config</h2>
 <p>
-  If a full download of remote config values is performed, the previous list of
-  values is replaced with the new one. If a partial download is performed, only
-  the retrieved keys are updated, and values that are not part of that download
-  stay as they were. A previously valid key may return no value after a full download.
-</p>
-<h2>Manually Downloading Remote Config</h2>
-<p>
-  There are three ways to trigger remote config value download manually:
-</p>
-<ul>
-  <li>
-    <span style="font-weight: 400;">Manually downloading all keys</span>
-  </li>
-  <li>
-    <span style="font-weight: 400;">Manually downloading specific keys</span>
-  </li>
-  <li>Manually downloading, omitting (everything except) keys.</li>
-</ul>
-<p>
-  <span style="font-weight: 400;">Each of these calls also has an optional parameter that you can provide a RCDownloadCallback to, which would be triggered when the download attempt has finished.</span>
-</p>
-<p>
-  <span style="font-weight: 400;"><code class="java">dowloadAllKeys</code></span><span style="font-weight: 400;">&nbsp;is</span><span style="font-weight: 400;"> the same as the automatically triggered update - it replaces all stored values with the ones from the server (all locally stored values are deleted and replaced with new ones).</span>
-</p>
-<p>
-  <span style="font-weight: 400;">Or you might only want to update specific key values. To do so, you will need to call <code class="dart">downloadSpecificKeys</code> to downloads new values for the wanted keys. Those are provided with a String array.</span>
-</p>
-<p>
-  <span style="font-weight: 400;">Or you might want to update all the values except a few defined keys. To do so,&nbsp; call <code class="dart">downloadOmittingKeys</code> would update all values except the provided keys</span><span style="font-weight: 400;">. The keys are provided with a String array.</span>
-</p>
-<div class="tabs">
-  <div class="tabs-menu">
-    <span class="tabs-link is-active">All Keys</span>
-    <span class="tabs-link">Certain Keys</span>
-    <span class="tabs-link">Omit Keys</span>
-  </div>
-  <div class="tab">
-    <pre><code class="dart">Countly.instance.remoteConfig.downloadAllKeys((rResult, error, fullValueUpdate, downloadedValues) {
-    if (rResult == RequestResult.Success) {
-        // do sth
-    } else {
-        // do sth
-    }
-});</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="dart">Countly.instance.remoteConfig.downloadSpecificKeys(List&lt;String&gt; keysToInclude, (rResult, error, fullValueUpdate, downloadedValues) {
-    if (rResult == RequestResult.Success) {
-        // do sth
-    } else {
-        // do sth
-    }
-});</code></pre>
-  </div>
-  <div class="tab is-hidden">
-    <pre><code class="dart">Countly.instance.remoteConfig.downloadOmittingKeys(List&lt;String&gt; keysToExclude, (rResult, error, fullValueUpdate, downloadedValues) {
-    if (rResult == RequestResult.Success) {
-        // do sth
-    } else {
-        // do sth
-    }
-});</code></pre>
-  </div>
-</div>
-<p>
-  <span style="font-weight: 400;">When making requests with an "inclusion" or "exclusion" array, if those arrays are empty or null, they will function the same as a <code class="java">dowloadAllKeys</code> request and will update all the values. This means it will also erase all keys not returned by the server.</span>
-</p>
-<h2>Getting Stored Remote Config Values</h2>
-<p>
-  To get a stored value, call <code class="dart">getValue</code> with the specified
-  key. This returns an Future&lt;RCData&gt; object that contains the value of the
-  key and the metadata about that value's owner. If value in RCData was
-  <code>null</code>
-  <span style="font-weight: 400;">then no value was found or the value was <code>null</code>.</span>
-  &nbsp;
-</p>
-<pre><code class="dart">Object? value_1 = await Countly.instance.remoteConfig.getValue("key_1").value;
-Object? value_2 = await Countly.instance.remoteConfig.getValue("key_2").value;
-Object? value_3 = await Countly.instance.remoteConfig.getValue("key_3").value;
-Object? value_4 = await Countly.instance.remoteConfig.getValue("key_4").value;
-
-int intValue = value1 as int;<br>double doubleValue = value2 as double;<br>JSONArray jArray = value3 as JSONArray;<br>JSONObject jObj = value4 as JSONObject;<br></code></pre>
-<p>
-  If you want to get all values together you can use
-  <code class="dart">getAllValues</code> which returns a Future&lt;Map&lt;String,
-  RCData&gt;&gt;.
-  <span style="font-weight: 400;">The SDK does not know the returned value type, so, it will return the <code>Object</code></span><span style="font-weight: 400;">. The developer then needs to cast it to the appropriate type. The returned values may also be <code>JSONArray</code></span><span style="font-weight: 400;">,&nbsp;</span><code>JSONObject</code>,
-  or just a simple value, such as <code>int</code>.
-</p>
-<pre><code class="dart">Map&lt;String, RCData&gt; allValues = await Countly.instance.remoteConfig.getAllValues();<br>
-int intValue = allValues["key_1"] as int;<br>double doubleValue = allValues["key_2"] as double;<br>JSONArray jArray = allValues["key_3"] as JSONArray;<br>JSONObject jObj = allValues["key_4"] as JSONObject;</code></pre>
-<p>
-  RCData object has two keys: value (Object) and isCurrentUsersData (Boolean).
-  Value holds the data sent from the server for the key that the RCData object
-  belongs to. The isCurrentUsersData is only false when there was a device ID change,
-  but somehow (or intentionally) a remote config value was not updated.
-</p>
-<pre><code class="dart">Class RCData {
-  Object value;
-  Boolean isCurrentUsersData;
-}</code></pre>
-<h2>Enrolling and Exiting A/B tests</h2>
-<p>
-  You can enroll your users into into A/B tests for certain keys or remove them
-  from some or all existing A/B tests available.
-</p>
-<p>
-  To enroll a user into the A/B tests for the given keys you use the following
-  method:
-</p>
-<pre>Countly.instance.remoteConfig.enrollIntoABTestsForKeys(List&lt;String&gt; keys);</pre>
-<p>
-  Here the keys array is the mandatory parameter for this method to work. Instead
-  if you want to remove users from A/B tests of certain keys you can use the following
-  function:
-</p>
-<pre>Countly.instance.remoteConfig.exitABTestsForKeys(List&lt;String&gt; keys);</pre>
-<p>
-  Here if no keys are provided it would remove the user from all A/B tests instead.
-</p>
-<h2>Automatic Remote Config Triggers</h2>
-<p>
-  <span style="font-weight: 400;">Automatic remote config triggers have been turned off by default; therefore, no remote config values will be requested without developer intervention.</span>
-</p>
-<p>
-  <span style="font-weight: 400;">The automatic download triggers that would trigger a full value download are:</span>
+  There are three ways for manually requesting remote config update:
 </p>
 <ul>
-  <li>
-    <span style="font-weight: 400;">when the SDK has finished initializing</span>
-  </li>
-  <li>
-    <span style="font-weight: 400;">after the device ID is changed without merging</span>
-  </li>
-  <li>
-    <span style="font-weight: 400;">when user gets out of temp ID mode</span>
-  </li>
-  <li>
-    <span style="font-weight: 400;">when 'remote-config' consent is given after it had been removed before (if consents are enabled)</span>
-  </li>
+  <li>Manually updating everything</li>
+  <li>Manually updating specific keys</li>
+  <li>Manually updating everything except specific keys</li>
 </ul>
 <p>
-  To enable the automatic triggers, you have to call
-  <code class="dart">enableRemoteConfigAutomaticTriggers</code> on the configuration
-  object you will provide during init.
+  Each of these requests also has a callback. If that returns a non-null value,
+  the request encountered some error and failed.
 </p>
-<pre><code class="dart">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY)
-  ..enableRemoteConfigAutomaticTriggers(); // necessary to enable the feature
-</code></pre>
-<h2>Clearing Stored Values</h2>
 <p>
-  <span style="font-weight: 400;">At some point, you might like to erase all the values downloaded from the server. You will need to call one function to do so.</span>
+  Functionally the manual update for everything <code>remoteConfigUpdate</code>
+  is the same as the automatic update - replaces all stored values with the ones
+  from the server (all locally stored ones are deleted and in their place are put
+  new ones). The advantage is that you can make the request whenever it is desirable
+  for you. It has a callback to let you know when it has finished.
 </p>
-<pre>Countly.instance.remoteConfig.clearAll();</pre>
-<h2>Global Download Callbacks</h2>
+<pre><code class="JavaScript">Countly.remoteConfigUpdate((result){
+  print(result);
+});</code></pre>
 <p>
-  Also, you may provide callback functions to be informed when the request is finished
-  with <code class="dart">remoteConfigRegisterGlobalCallback</code> (You can register
-  multiple callbacks by calling this method numerous times).&nbsp;
+  You might want to update only specific key values. For that you need to call
+  <code>updateRemoteConfigForKeysOnly</code> with a list of keys you want to be
+  updated. That list is an array with string values of those keys. It has a callback
+  to let you know when the request has finished.
 </p>
-<pre><code class="dart">CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY) <br>  ..remoteConfigRegisterGlobalCallback((rResult, error, fullValueUpdate, downloadedValues) {<br>    if (error != null) {<br>      // do sth<br>    }<br>  })
-</code></pre>
+<pre><code class="JavaScript">Countly.updateRemoteConfigForKeysOnly(["name"],(result){
+  print(result);
+});</code></pre>
 <p>
-  RCDownloadCallback is called when the remote config download request is finished,
-  and it would have the following parameters:
+  You might want to update all values except a few defined keys, for that call
+  <code>updateRemoteConfigExceptKeys</code>. The key list is an array with string
+  values of the keys. It has a callback to let you know when the request has finished.
 </p>
-<ul>
-  <li>
-    <code class="dart">rResult</code>: RequestResult Enum (either
-    <span class="hljs-built_in">Error</span><span>, Success or NetworkIssue</span>)
-  </li>
-  <li>
-    <code class="dart">error</code>: String (error message. "null" if there is
-    no error)
-  </li>
-  <li>
-    <code class="dart">fullValueUpdate</code>: boolean ("true" - all values updated,
-    "false" - a subset of values updated)
-  </li>
-  <li>
-    <code class="dart">downloadedValues</code>: Map&lt;String, RCData&gt; (the
-    whole downloaded remote config values)
-  </li>
-</ul>
-<pre><code class="dart">RCDownloadCallback {
-  void callback(RequestResult rResult, String error, boolean fullValueUpdate, Map&lt;String, RCData&gt; downloadedValues)
-}
-</code></pre>
+<pre><code class="JavaScript">Countly.updateRemoteConfigExceptKeys(["url"],(result){
+  print(result);
+});</code></pre>
 <p>
-  <code class="dart">downloadedValues</code> would be the downloaded remote config
-  data where the keys are remote config keys, and their value is stored in RCData
-  class with metadata showing to which user data belongs. The data owner will always
-  be the current user.
+  When making requests with an "inclusion" or "exclusion" array, if those arrays
+  are empty or null, they will function the same as a simple manual request and
+  will update all values. This means that it will also erase all keys not returned
+  by the server.
 </p>
-<h2>Caching Remote Config Values</h2>
+<h2>Getting remote config values</h2>
 <p>
-  Another thing you can do is to enable value caching with the
-  <code class="dart">enableRemoteConfigValueCaching</code> flag. If all values
-  were not updated, you would have metadata indicating if a value belongs to the
-  old or current user.
+  To request a stored value, call getRemoteConfigValueForKey with the specified
+  key. If it returns null then no value was found. The SDK has no knowledge of
+  the returned value type and therefore returns an Object. The developer needs
+  to cast it to the appropriate type. The returned values can also be a JSONArray,
+  JSONObject or just a simple value like int.
 </p>
-<pre>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY) <br>  ..enableRemoteConfigValueCaching(); </pre>
+<pre><code class="JavaScript">Countly.getRemoteConfigValueForKey("name", (result){
+  print(result);
+});</code></pre>
+<h2>Clearing stored remote config values</h2>
+<p>
+  At some point you might want to erase all values downloaded from the server.
+  To achieve that you need to call one function.
+</p>
+<pre><code class="JavaScript">Countly.remoteConfigClearValues((result){
+  print(result);
+});</code></pre>
 <h1>User feedback</h1>
 <p>
   There are a couple ways of receiving feedback from your users: star-rating dialog,
@@ -1018,7 +898,7 @@ config.setStarRatingTextDismiss("Custom message"); // Only available for Android
   Feedback widget shows a server configured widget to your user devices.
 </p>
 <div class="img-container">
-  <img src="/guide-media/01GVCPN6ZAEC0RG337CY2T0KZE" alt="001.png">
+  <img src="/hc/article_attachments/9519364331417/001.png" alt="001.png">
 </div>
 <p>
   It's possible to configure any of the shown text fields and replace them with
@@ -1039,7 +919,7 @@ config.setStarRatingTextDismiss("Custom message"); // Only available for Android
   you first have to get the widget ID from your server:
 </p>
 <div class="img-container">
-  <img src="/guide-media/01GV9ZW7Z8EYHZ4A7EX066G6T6" alt="002.png">
+  <img src="/hc/article_attachments/9519388544793/002.png" alt="002.png">
 </div>
 <p>
   Using that you can call the function to show the widget popup:
@@ -1166,13 +1046,10 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
 <p>
   Note that this feature is available only for Enterprise Edition.
 </p>
-<p>
-  <span>You would call&nbsp;</span><span></span><code>Countly.instance.userProfile.</code><span>to see the available functionality for modifying user properties.</span>
-</p>
 <h2>Setting User profile values during init</h2>
 <p>
-  If possible set user properties during initialization. This way they would be
-  reflected when the session is started shortly.
+  We recommend to set the user properties during initialization. This way they
+  would be reflected when the session is started shortly.
 </p>
 <p>
   Using the following call, you can set both the predefined and the custom user
@@ -1180,19 +1057,16 @@ Countly.reportFeedbackWidgetManually(chosenWidget, retrievedWidgetData , reporte
 </p>
 <pre><code class="“JavaScript”">var userProperties = {<br>    ‘customProperty’: ‘custom Value’,<br>    ‘username’: ‘USER_NAME’,<br>    ‘email’: ‘USER_EMAIL’<br>};<br>CountlyConfig config = CountlyConfig(SERVER_URL, APP_KEY);
 config.setUserProperties(userProperties); </code></pre>
-<h2 id="setting-user-profile-values-during-init" class="anchor-heading">Setting User profile values</h2>
-<p>Ther following calls can be used after init.</p>
+<h2>Setting Predefined Values</h2>
 <p>
-  If you want to set a single property, you can call
-  <code class="“JavaScript”">Countly.userProfile.setUserProperty(key, value)</code>
+  If you want to set the user data after init, you can use
+  <code class="“JavaScript”">Countly.setUserData(USER_DATA);</code>
 </p>
-<pre>Countly.instance.userProfile.setProperty('specialProperty', 'value');<br>Countly.instance.userProfile.save();</pre>
 <p>
-  If you want to set multiple properties at the same time, you can use:
-  <code class="“JavaScript”">Countly.userProfile.setUserProperties(userProperties)</code>
+  Using the call you can only set the following predefined keys.
 </p>
 <pre><code class="JavaScript">// example for setting user data
-Map&lt;String, Object&gt; userProperties= {
+Map&lt;String, Object&gt; options = {
     "name": "Nicola Tesla",
     "username": "nicola",
     "email": "info@nicola.tesla",
@@ -1201,18 +1075,10 @@ Map&lt;String, Object&gt; userProperties= {
     "picture": "http://images2.fanpop.com/images/photos/3300000/Nikola-Tesla-nikola-tesla-3365940-600-738.jpg",
     "picturePath": "",
     "gender": "M", // "F"
-    "byear": "1919",<br>    "special_value": "something special"
+    "byear": "1919",
 };
-Countly.instance.setUserProperties(userProperties);<br>Countly.instance.userProfile.save();</code></pre>
-<p>
-  After you have provided the user profile information, you must save it by calling
-  <code class="“JavaScript”">Countly.userProfile.save()</code>. This would then
-  create a request and send it to the server.
-</p>
-<p>
-  If you changed your mind and want to clear the currently prepared values, call
-  <code class="“JavaScript”">Countly.userProfile.clear()</code>before calling "save".
-</p>
+Countly.setUserData(options);</code></pre>
+<p>&nbsp;</p>
 <h2>Modifying custom data</h2>
 <p>
   Additionally, you can do different manipulations on your custom data values,
@@ -1220,25 +1086,27 @@ Countly.instance.setUserProperties(userProperties);<br>Countly.instance.userProf
   the same property.
 </p>
 <p>Below is the list of available methods:</p>
-<pre><code class="JavaScript">//increment used value by 1
-Countly.instance.increment("increment");
+<pre><code class="JavaScript">//set one custom properties
+Countly.setProperty("setProperty", "My Property");
+//increment used value by 1
+Countly.increment("increment");
 //increment used value by provided value
-Countly.instance.incrementBy("incrementBy", 10);
+Countly.incrementBy("incrementBy", 10);
 //multiply value by provided value
-Countly.instance.multiply("multiply", 20);
+Countly.multiply("multiply", 20);
 //save maximal value
-Countly.instance.saveMax("saveMax", 100);
+Countly.saveMax("saveMax", 100);
 //save minimal value
-Countly.instance.saveMin("saveMin", 50);
+Countly.saveMin("saveMin", 50);
 //set value if it does not exist
-Countly.instance.setOnce("setOnce", 200);
+Countly.setOnce("setOnce", 200);
 
 //insert value to array of unique values
-Countly.instance.pushUnique("type", "morning");;
+Countly.pushUniqueValue("type", "morning");;
 //insert value to array which can have duplocates
-Countly.instance.push("type", "morning");
+Countly.pushValue("type", "morning");
 //remove value from array
-Countly.instance.pull("type", "morning");
+Countly.pullValue("type", "morning");
 </code></pre>
 <h1>Application Performance Monitoring</h1>
 <p>
@@ -1353,7 +1221,7 @@ config.setConsentEnabled(["location", "sessions", "attribution", "push", "events
   push notifications. You are expected to handle receiving consent from end-users
   using proper UIs depending on your app's context. You are also expected to store
   them either locally or remotely. Following this step, you will need to call the
-  <code>giveConsent</code> method on each app launch depending on the permissions
+  <code>giveConsentInit</code> method on each app launch depending on the permissions
   you managed to get from the end-users.
 </p>
 <p>Ideally you would give consent during initialization.</p>
